<resources>
    <string name="app_name">iTrust</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email_hint">exemplo@teste.com</string>
    <string name="title_inicio">Início</string>
    <string name="title_favoritos">Favoritos</string>
    <string name="title_pesquisar">Pesquisar</string>
    <string name="title_perfil">Perfil</string>
    <string name="account_name">Nome</string>
    <string name="password">Senha</string>
    <string name="password_hint">**********</string>
    <string name="forgot_your_login_info">Esqueceu sua senha?</string>
    <string name="sign_in">Entrar</string>
    <string name="classe">Responsável/Menor</string>
    <string name="email">E-mail</string>
    <string name="estado">Estado</string>
    <string name="remember_my_password">Lembrar senha</string>
    <string name="username">Email</string>
    <string name="create_account">Criar conta</string>
    <string name="responsavel">Responsável</string>
    <string name="menor">Menor de idade</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dataNasc">Data de nascimento</string>
    <string name="title_activity_maps">Map</string>
    <string name="roundedColorView_transitionName">Trans</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>


    <string-array name="estados">
        <item>Acre</item>
        <item>Alagoas</item>
        <item>Amapá</item>
        <item>Amazonas</item>
        <item>Bahia</item>
        <item>Ceará</item>
        <item>Distrito Federal</item>
        <item>Espírito Santo</item>
        <item>Goiás</item>
        <item>Maranhão</item>
        <item>Mato Grosso</item>
        <item>Mato Grosso do Sul</item>
        <item>Minas Gerais</item>
        <item>Pará</item>
        <item>Paraíba</item>
        <item>Paraná</item>
        <item>Pernambuco</item>
        <item>Piauí</item>
        <item>Rio de Janeiro</item>
        <item>Rio Grande do Norte</item>
        <item>Rio Grande do Sul</item>
        <item>Rondônia</item>
        <item>Roraima</item>
        <item>Santa Catarina</item>
        <item>São Paulo</item>
        <item>Sergipe</item>
        <item>Tocantins</item>
    </string-array>
    <string-array name="condicao">
        <item>Responsável</item>
        <item>Menor de idade</item>
    </string-array>


</resources>
